[package]
name = "torrent-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.14"
reqwest = "0.11.23"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.6"
url = "2.5.0"
anyhow = "1.0.79"
